build(uv): update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,17 +15,19 @@ dependencies = [
     "cohere>=5.14.0",
     "datasets>=3.4.0",
     "einops>=0.8.1",
-    "langchain>=0.3.20",
+    "langchain[openai]>=0.3.20",
     "langchain-cohere>=0.4.3",
     "langchain-community>=0.3.19",
     "langchain-huggingface>=0.1.2",
     "langchainhub>=0.1.21",
+    "langsmith>=0.3.15",
     "loguru>=0.7.3",
     "loralib>=0.1.2",
     "pymupdf>=1.25.4",
     "python-dotenv>=1.0.1",
     "qdrant-client>=1.13.3",
     "rich>=13.9.4",
+    "rouge-score>=0.1.2",
     "sentencepiece>=0.2.0",
     "transformers>=4.49.0",
     "typer>=0.15.2",
