--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "typer>=0.15.2",
     "wikipedia>=1.4.0",
     "xmltodict>=0.14.2",
+    "ragas>=0.2.14",
 ]
 
 [project.scripts]
