--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "wikipedia>=1.4.0",
     "xmltodict>=0.14.2",
     "ragas>=0.2.14",
+    "matplotlib>=3.10.1",
+    "seaborn>=0.13.2",
 ]
 
 [project.scripts]
