uv add ipykernel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "seaborn>=0.13.2",
     "bert-score>=0.3.13",
+    "ipykernel>=6.29.5",
 ]
 
 [project.scripts]
