--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "seaborn>=0.13.2",
     "bert-score>=0.3.13",
     "ipykernel>=6.29.5",
+    "gputil>=1.4.0",
+    "bitsandbytes>=0.45.5",
 ]
 
 [project.scripts]
