--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "gputil>=1.4.0",
     "bitsandbytes>=0.45.5",
+    "deepeval>=2.7.1",
 ]
 
 [project.scripts]
